[package]
name = "dencode"
edition = "2018"
version = "0.1.0"
authors = [
    "Swift Navigation <dev@swift-nav.com>",
    "Matt Hunzinger <matthunz2@gmail.com>",
]
description = "Utilities for decoding and encoding frames from readers and writers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/swift-nav/dencode"
homepage = "https://github.com/swift-nav/dencode"
documentation = "https://docs.rs/crate/dencode"
keywords = ["decode", "encode", "codec"]
categories = ["encoding", "asynchronous", "network-programming"]

[features]
default = ["async"]
async = ["futures-sink", "futures-util", "pin-project"]

[dependencies]
bytes = "1"

[dependencies.pin-project]
version = "1"
optional = true

[dependencies.futures-sink]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io"]
optional = true

[dev-dependencies]
futures = "0.3.7"

[package.metadata.docs.rs]
all-features = true
