[package]
name = "dencode"
edition = "2021"
version = "0.4.0"
authors = [
    "Swift Navigation <dev@swift-nav.com>",
    "Matt Hunzinger <matthunz2@gmail.com>",
]
description = "Utilities for decoding and encoding frames from readers and writers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/swift-nav/dencode"
homepage = "https://github.com/swift-nav/dencode"
documentation = "https://docs.rs/crate/dencode"
keywords = ["decode", "encode", "codec"]
categories = ["encoding", "asynchronous", "network-programming"]

[features]
default = []
futures = ["futures-core", "futures-io", "futures-sink", "pin-project-lite"]

[dependencies]
bitvec = { version = "1", optional = true }
bytes = { version = "1", optional = true }
futures-core = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
futures-sink = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
bitvec = "1"
bytes = "1"
futures = "0.3.7"

[package.metadata.docs.rs]
all-features = true
